Fixed the tab lines
Solved some problem with the tab lines not showing because of the multirow tabs code.

--- a/userChrome.css
+++ b/userChrome.css
@@ -371,10 +371,10 @@ menupopup {
     height:var(--tab-min-height) !important;
 }
 #titlebar{
-    margin-bottom:calc(var(--tab-min-height)*-1) !important;
+    margin-bottom:calc(1px + var(--tab-min-height)*-1) !important;
 }
 #main-window[sizemode="maximized"] #titlebar{
-    margin-bottom:calc(6px + var(--tab-min-height)*-1) !important;
+    margin-bottom:calc(8px + var(--tab-min-height)*-1) !important;
 }
 #main-window[sizemode="maximized"] #TabsToolbar{
     margin-left:var(--tab-min-height);
